--- a/css/app.css
+++ b/css/app.css
@@ -159,7 +159,6 @@ a:hover {
 .sidebar_list-wrapper {
     display: table-cell;
     width: 50%;
-    padding: 10px;
 }
 
 .sidebar_details-wrapper {
@@ -167,8 +166,9 @@ a:hover {
     padding: 5px;
 }
 
-.sidebar_list {
+ul.sidebar_list {
     list-style-type: none;
+    padding-left: 40px;
     width: 250px;
     height: calc(100vh - 164px);
     overflow-y: scroll;
@@ -176,7 +176,7 @@ a:hover {
 
 .sidebar_details-wrapper {
     height: auto;
-    width: 100%;
+    width: 50px;
 }
 
 .sidebar_details-header {
